[gd_scene load_steps=8 format=3 uid="uid://jo5usjko41tt"]

[ext_resource type="Script" uid="uid://bc1n8l6fdvsl1" path="res://exercises-lists/pt-br/Lista3/Exercicio2/Exercicio2.gd" id="1_n5r4c"]
[ext_resource type="AudioStream" uid="uid://b2qym15m1nvux" path="res://assets/Lista3/Exercicio3/cachorro.ogg" id="2_um0b5"]
[ext_resource type="Texture2D" uid="uid://kr5vowfbbxug" path="res://assets/Lista3/Exercicio3/cachorro.png" id="2_vaxds"]
[ext_resource type="AudioStream" uid="uid://45ewngibsq80" path="res://assets/Lista3/Exercicio3/cat.ogg" id="3_6u1np"]
[ext_resource type="Texture2D" uid="uid://dbosdqrpt0ih0" path="res://assets/Lista3/Exercicio3/cat.png" id="3_k17cx"]
[ext_resource type="AudioStream" uid="uid://dvy4cbwwbuffb" path="res://assets/Lista3/Exercicio3/sheep.ogg" id="4_ikt7p"]
[ext_resource type="Texture2D" uid="uid://dsx2vghrr44ic" path="res://assets/Lista3/Exercicio3/ovelha.png" id="4_k17cx"]

[node name="Exercicio2" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
script = ExtResource("1_n5r4c")
audio_cachorro = ExtResource("2_um0b5")
audio_gato = ExtResource("3_6u1np")
audio_ovelha = ExtResource("4_ikt7p")

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="Center"]
layout_mode = 2
theme_override_constants/h_separation = 105
theme_override_constants/v_separation = 15
columns = 3

[node name="CachorroLabel" type="Label" parent="Center/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Cachorro"
horizontal_alignment = 1

[node name="GatoLabel" type="Label" parent="Center/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Gato"
horizontal_alignment = 1

[node name="CavaloPressed" type="Label" parent="Center/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Ovelha"
horizontal_alignment = 1

[node name="CachorroIcon" type="TextureRect" parent="Center/GridContainer"]
custom_minimum_size = Vector2(95, 0)
layout_mode = 2
texture = ExtResource("2_vaxds")
expand_mode = 4

[node name="GatoIcon" type="TextureRect" parent="Center/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
texture = ExtResource("3_k17cx")
expand_mode = 4

[node name="OvelhaIcon" type="TextureRect" parent="Center/GridContainer"]
custom_minimum_size = Vector2(155, 0)
layout_mode = 2
texture = ExtResource("4_k17cx")
expand_mode = 4

[node name="CachorroButton" type="Button" parent="Center/GridContainer"]
layout_mode = 2
text = "Falar"

[node name="GatoButton" type="Button" parent="Center/GridContainer"]
layout_mode = 2
text = "Falar"

[node name="OvelhaButton" type="Button" parent="Center/GridContainer"]
layout_mode = 2
text = "Falar"

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0

[node name="AudioSlider" type="VSlider" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
max_value = 1.0
step = 0.1
value = 0.5

[node name="Resultado" type="Label" parent="VBox"]
layout_mode = 2
size_flags_vertical = 8
text = "AÃºdio"
horizontal_alignment = 1

[node name="Resultado" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 68
horizontal_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="Center/GridContainer/CachorroButton" to="." method="_on_cachorro_pressed"]
[connection signal="pressed" from="Center/GridContainer/GatoButton" to="." method="_on_gato_pressed"]
[connection signal="pressed" from="Center/GridContainer/OvelhaButton" to="." method="_on_ovelha_pressed"]
[connection signal="value_changed" from="VBox/AudioSlider" to="." method="_on_audio_slider_value_changed"]
